--- a/fr/index.org
+++ b/fr/index.org
@@ -30,10 +30,10 @@ Installez avec =M-x package-install RET org RET= (voir [[http://orgmode.org/elpa
 
 Ou téléchargez les archives [[http://orgmode.org/org-9.1.5.tar.gz][tar.gz]] ou [[http://orgmode.org/org-9.1.5.zip][zip]].
 
-Vous pouvez parcourir la version en développement sur [[http://orgmode.org/cgit.cgi/org-mode.git/][cgit]] ou cloner
+Vous pouvez parcourir la version en développement sur [[https://code.orgmode.org/bzg/org-mode][code.orgmode.org]] ou cloner
 les dépôts :
 
-=~$ git clone git://orgmode.org/org-mode.git= (=http= fonctionne aussi)
+=~$ git clone https://code.orgmode.org/bzg/org-mode.git=
 
 Versions de développement quotidiennes : [[http://orgmode.org/org-latest.tar.gz][tar.gz]] ou [[http://orgmode.org/org-latest.zip][zip]]
 
@@ -86,8 +86,7 @@ Voir les [[http://orgmode.org/worg/doc.html][docs]] de référence sur les /hook
 
 Voir la liste des [[http://orgmode.org/worg/org-papers.html][papiers (scientifiques)]] au sujet d'Org mode.
 
-Avant de soumettre un rapport de bogue, assurez-vous d'avoir lu la section
-[[http://orgmode.org/org.html#Feedback]["Feedback"]] du manuel.
+Avant de soumettre un rapport de bogue, assurez-vous d'avoir lu la section [[http://orgmode.org/org.html#Feedback]["Feedback"]] du manuel.
 
 Vous pouvez aussi lire [[http://www.catb.org/esr/faqs/smart-questions.html][How To Ask Questions The Smart Way]], d'Eric
 S. Raymond et Rick Moen.
