--- a/ja/index.org
+++ b/ja/index.org
@@ -27,9 +27,9 @@
 
 =M-x list-packages RET= ([[http://orgmode.org/elpa.html][Org ELPA（英語）]]を読んでください）
 
-開発版は、以下の手段で入手できます。（[[http://orgmode.org/cgit.cgi/org-mode.git/][cgit]]）
+開発版は、以下の手段で入手できます。（[[https://code.orgmode.org/bzg/org-mode][code.orgmode.org]]）
 
-=~$ git clone git://orgmode.org/org-mode.git= (http://orgmode.org/org-mode.git も有効です)
+=~$ git clone https://code.orgmode.org/bzg/org-mode.git=
 
 ナイトリー版は、 [[http://orgmode.org/org-latest.tar.gz][tar.gz]] もしくは [[http://orgmode.org/org-latest.zip][zip]] をダウンロードしてください。
 
