--- a/fr/index.org
+++ b/fr/index.org
@@ -24,11 +24,11 @@ de maintenir des listes TODO, de planifier des projets et de publier des documen
 #+ATTR_HTML: :id main-image
 [[file:../img/main.jpg]]
 
-La version stable est la *9.1.5*, décembre 2017.  Voir les ([[file:~/install/git/orgweb/Changes.org][changements]]).
+La version stable est la *9.1.6*, janvier 2018.  Voir les ([[file:~/install/git/orgweb/Changes.org][changements]]).
 
 Installez avec =M-x package-install RET org RET= (voir [[http://orgmode.org/elpa.html][Org ELPA]]).
 
-Ou téléchargez les archives [[http://orgmode.org/org-9.1.5.tar.gz][tar.gz]] ou [[http://orgmode.org/org-9.1.5.zip][zip]].
+Ou téléchargez les archives [[http://orgmode.org/org-9.1.6.tar.gz][tar.gz]] ou [[http://orgmode.org/org-9.1.6.zip][zip]].
 
 Vous pouvez parcourir la version en développement sur [[https://code.orgmode.org/bzg/org-mode][code.orgmode.org]] ou cloner
 les dépôts :
