--- a/Changes_old.org
+++ b/Changes_old.org
@@ -2,8 +2,8 @@
 #+author: Carsten Dominik
 #+email: carsten at orgmode dot org
 #+startup: hidestars
-#+link:      git http://orgmode.org/w/?p=org-mode.git;a=commit;h=%s
-#+link:      doc http://orgmode.org/worg/doc.html#%s
+#+link:      git https://code.orgmode.org/bzg/org-mode/commit/%s
+#+link:      doc https://orgmode.org/worg/doc.html#%s
 #+keywords:  Org Org-mode Emacs outline planning note authoring project plain-text LaTeX HTML
 #+description: Org Org-mode Emacs Changes ChangeLog release notes archives
 #+options: H:3 num:nil toc:t \n:nil @:t ::t |:t ^:{} *:t TeX:t LaTeX:nil skip:nil
@@ -314,7 +314,7 @@ Evaluating a Stan block can produce two different results.
    that does not end in ".stan".
 
 For more information and usage examples, visit
-http://orgmode.org/worg/org-contrib/babel/languages/ob-doc-stan.html
+https://orgmode.org/worg/org-contrib/babel/languages/ob-doc-stan.html
 
 **** Support for Oracle databases via ~sqlplus~
 
@@ -1453,7 +1453,7 @@ This allows to specify the names of automatic bookmarks.
 *** New option [[doc:org-agenda-ignore-drawer-properties][org-agenda-ignore-drawer-properties]]
 
 This allows more flexibility when optimizing the agenda generation.
-See http://orgmode.org/worg/agenda-optimization.html for details.
+See https://orgmode.org/worg/agenda-optimization.html for details.
 *** New option: [[doc:org-html-link-use-abs-url][org-html-link-use-abs-url]] to force using absolute URLs
 
 This is an export/publishing option, and should be used either within
@@ -1521,7 +1521,7 @@ instructions:
 When in doubt, run =M-x org-version RET= and see if you have a mixed-up
 installation.
 
-See http://orgmode.org/org.html#Installation for details.
+See https://orgmode.org/org.html#Installation for details.
 
 ** Incompatible changes
 
@@ -1534,7 +1534,7 @@ you will have to update them.
 
 Below is a list of changes for which you need to take action.
 
-See http://orgmode.org/worg/org-8.0.html for the most recent version of
+See https://orgmode.org/worg/org-8.0.html for the most recent version of
 this list and for detailed instructions on how to migrate.
 
 **** New export engine
@@ -1556,7 +1556,7 @@ corresponding files start with the =ox-= prefix.
 If you customized an export back-end (like HTML or LaTeX), you will need to
 rename some options so that your customization is not lost.  Typically, an
 option starting with =org-export-html-= is now named =org-html-=.  See the
-manual for details and check [[http://orgmode.org/worg/org-8.0.html][this Worg page]] for directions.
+manual for details and check [[https://orgmode.org/worg/org-8.0.html][this Worg page]] for directions.
 
 **** New syntax for #+ATTR_HTML/LaTeX/... options
 
@@ -1617,7 +1617,7 @@ manual for details and check [[http://orgmode.org/worg/org-8.0.html][this Worg p
      ~ox-taskjuggler.el~ by Nicolas Goaziou and others.
 
      Also, the Taskjuggler exporter now uses TJ3 by default.  John Hendy
-     wrote [[http://orgmode.org/worg/org-tutorials/org-taskjuggler3.html][a tutorial on Worg]] for the TJ3 export.
+     wrote [[https://orgmode.org/worg/org-tutorials/org-taskjuggler3.html][a tutorial on Worg]] for the TJ3 export.
 
 ** New packages in core
 
@@ -1663,7 +1663,7 @@ manual for details and check [[http://orgmode.org/worg/org-8.0.html][this Worg p
 
     Display bullets instead of stars for headlines.
 
-    Also see [[http://orgmode.org/worg/org-faq.html#sec-8-12][this updated FAQ]] on how to display another character than "*"
+    Also see [[https://orgmode.org/worg/org-faq.html#sec-8-12][this updated FAQ]] on how to display another character than "*"
     for starting headlines.
 
 *** ~org-favtable.el~ by Marc-Oliver Ihm
@@ -1671,7 +1671,7 @@ manual for details and check [[http://orgmode.org/worg/org-8.0.html][this Worg p
     ~org-favtable.el~ helps you to create and update a table of favorite
     locations in org, keeping the most frequently visited lines right at
     the top.  This table is called "favtable".  See the documentation on
-    [[http://orgmode.org/worg/org-contrib/org-favtable.html][Worg]].
+    [[https://orgmode.org/worg/org-contrib/org-favtable.html][Worg]].
 
 *** ~ox-confluence.el~ by Sébastien Delafond
 
@@ -1712,7 +1712,7 @@ manual for details and check [[http://orgmode.org/worg/org-8.0.html][this Worg p
 
 **** New export generic options
 
-If you use Org exporter, we advise you to re-read [[http://orgmode.org/org.html#Exporting][the manual section about
+If you use Org exporter, we advise you to re-read [[https://orgmode.org/org.html#Exporting][the manual section about
 it]].  It has been updated and includes new options.
 
 Among the new/updated export options, three are of particular importance:
@@ -2087,7 +2087,7 @@ of those tags.)
 You can use group tags for sparse tree in an Org buffer, for creating
 agenda views, and for filtering.
 
-See http://orgmode.org/org.html#Tag-groups for details.
+See https://orgmode.org/org.html#Tag-groups for details.
 
 *** Links
 
@@ -2095,7 +2095,7 @@ See http://orgmode.org/org.html#Tag-groups for details.
 
 Org knows how to store links from Org buffers, from info files and from
 other Emacs buffers.  Org can be taught how to store links from any buffer
-through new link protocols (see [[http://orgmode.org/org.html#Adding-hyperlink-types]["Adding hyperlink types"]] in the manual.)
+through new link protocols (see [[https://orgmode.org/org.html#Adding-hyperlink-types]["Adding hyperlink types"]] in the manual.)
 
 Sometimes you want Org to ignore added link protocols and store the link
 as if the protocol was not known.
@@ -2119,7 +2119,7 @@ with-description and without-description links when inserting them.
 
 When storing a link to a headline like
 
-: * See [[http://orgmode.org][Org website]]
+: * See [[https://orgmode.org][Org website]]
 
 [[doc:org-store-link][org-store-link]] used to convert the square brackets into curly brackets.
 It does not anymore, taking the link description or the link path, when
@@ -2135,7 +2135,7 @@ those other formulas.
 **** You now use "nan" for empty fields in Calc formulas
 
 If empty fields are of interest, it is recommended to reread the section
-[[http://orgmode.org/org.html#Formula-syntax-for-Calc][3.5.2 Formula syntax for Calc]] of the manual because the description for the
+[[https://orgmode.org/org.html#Formula-syntax-for-Calc][3.5.2 Formula syntax for Calc]] of the manual because the description for the
 mode strings has been clarified and new examples have been added towards
 the end.
 
@@ -2154,7 +2154,7 @@ There are now three lookup functions:
 - [[doc:org-loopup-last][org-loopup-last]]
 - [[doc:org-loopup-all][org-loopup-all]]
 
-See [[http://orgmode.org/org.html#Lookup-functions][the manual]] for details.
+See [[https://orgmode.org/org.html#Lookup-functions][the manual]] for details.
 *** Startup keywords
 
 These new startup keywords are now available:
@@ -2285,7 +2285,7 @@ instead of requiring each Babel library one by one.
 
 David (and others) translated the Org compact guide in Spanish:
 
-You can read the [[http://orgmode.org/worg/orgguide/orgguide.es.pdf][PDF guide]].
+You can read the [[https://orgmode.org/worg/orgguide/orgguide.es.pdf][PDF guide]].
 
 *** ~poporg.el~ and ~outorg.el~
 
@@ -2296,7 +2296,7 @@ Org-mode available.  ~outorg.el~ comes together with ~outshine.el~ and
 ~navi-mode.el~, two more libraries by Thorsten Jolitz with the goal to give
 source-code buffers the /look & feel/ of Org-mode buffers while greatly
 improving navigation and structure editing.  A detailed description can be
-found here: http://orgmode.org/worg/org-tutorials/org-outside-org.html
+found here: https://orgmode.org/worg/org-tutorials/org-outside-org.html
 
 Here are two screencasts demonstrating Thorsten's tools:
 
@@ -2402,7 +2402,7 @@ Welcome and thanks to these new core contributors:
 ** Online documentation for hooks, commands and options
 
 You can read the documentation for hooks, commands (i.e. interactive
-functions) and options (i.e. customizable variables) [[http://orgmode.org/worg/doc.html][online]].  Clicking on a
+functions) and options (i.e. customizable variables) [[https://orgmode.org/worg/doc.html][online]].  Clicking on a
 command/option in this ChangeLog will take you to the online documentation
 for that command/option.
 
@@ -2411,7 +2411,7 @@ for that command/option.
 You can now add the Org ELPA repository like this:
 
 #+BEGIN_SRC emacs-lisp
-(add-to-list 'package-archives '("org" . "http://orgmode.org/elpa/") t)
+(add-to-list 'package-archives '("org" . "https://orgmode.org/elpa/") t)
 #+END_SRC
 
 It contains both the =org-*.tar= package (the core Org distribution, also
@@ -2419,7 +2419,7 @@ available through http://elpa.gnu.org) and the =org-plus*.tar= package (the
 extended Org distribution, with non-GNU packages from the =contrib/=
 directory.)
 
-See http://orgmode.org/elpa/
+See https://orgmode.org/elpa/
 
 ** Overview of the new keybindings
 
@@ -2454,7 +2454,7 @@ The basic method for installing Org is the same:
 But the build system is now more flexible and can be more easily
 adapted to suit your needs.
 
-See http://orgmode.org/worg/dev/org-build-system.html for details.
+See https://orgmode.org/worg/dev/org-build-system.html for details.
 
 *** New packages in core
 
@@ -2515,7 +2515,7 @@ the current one for the next major release.  Please report any problem on
 the mailing list!
 
 If you want to write a new export backend based on this export engine,
-please check the [[http://orgmode.org/worg/dev/org-export-reference.html][online documentation]].
+please check the [[https://orgmode.org/worg/dev/org-export-reference.html][online documentation]].
 
 *** New Babel languages
 
@@ -2666,7 +2666,7 @@ entry will be shown several times.
 
 **** New =todo-unblocked= and =nottodo-unblocked= skip conditions
 
-See the [[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Df426da][git commit]] for more explanations.
+See the [[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Df426da][git commit]] for more explanations.
 
 **** Allow category filtering in the agenda
 
@@ -2957,7 +2957,7 @@ This option allows Beamer export to inherit some properties.
 Thanks to Carsten for implementing this.
 
 **** ODT: Add support for ODT export in org-bbdb.el
-**** ODT: Add support for indented tables (see [[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3De9fd33][this commit]] for details)
+**** ODT: Add support for indented tables (see [[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3De9fd33][this commit]] for details)
 **** ODT: Improve the conversion from ODT to other formats
 **** ASCII: Swap the level-1/level-2 characters to underline the headlines
 **** Support for Chinese, simplified Chinese, Russian, Ukrainian and Japanese
@@ -3085,7 +3085,7 @@ explanations on why these changes were necessary.
 
 *** Emacs 21 support has been dropped
 
-    Do not use Org mode 7.xx with Emacs 21, use [[http://orgmode.org/org-6.36c.zip][version 6.36c]] instead.
+    Do not use Org mode 7.xx with Emacs 21, use [[https://orgmode.org/org-6.36c.zip][version 6.36c]] instead.
 
 *** XEmacs support requires the XEmacs development version
 
@@ -3235,7 +3235,7 @@ explanations on why these changes were necessary.
     This replaces the earlier system org-remember.  The manual only
     describes org-capture, but for people who prefer to continue to
     use org-remember, we keep a static copy of the former manual
-    section [[http://orgmode.org/org-remember.pdf][chapter about remember]].
+    section [[https://orgmode.org/org-remember.pdf][chapter about remember]].
 
     The new system has a technically cleaner implementation and more
     possibilities for capturing different types of data.  See
@@ -3299,7 +3299,7 @@ explanations on why these changes were necessary.
 **** org-taskjuggler.el (Christian Egli)
 
      Christian Egli's /org-taskjuggler.el/ module is now part of Org.
-     He also wrote a [[http://orgmode.org/worg/org-tutorials/org-taskjuggler.php][tutorial]] for it.
+     He also wrote a [[https://orgmode.org/worg/org-tutorials/org-taskjuggler.php][tutorial]] for it.
 
 **** org-ctags.el (Paul Sexton)
 
@@ -3519,7 +3519,7 @@ explanations on why these changes were necessary.
      Org-mode documents or subtrees can now be converted directly in
      to BEAMER presentation.  Turning a tree into a simple
      presentations is straight forward, and there is also quite some
-     support to make richer presentations as well.  See the [[http://orgmode.org/manual/Beamer-class-export.html#Beamer-class-export][BEAMER
+     support to make richer presentations as well.  See the [[https://orgmode.org/manual/Beamer-class-export.html#Beamer-class-export][BEAMER
      section]] in the manual for more details.
 
      Thanks to everyone who has contributed to the discussion about
@@ -4352,7 +4352,7 @@ adding it to org.el and documenting it!
 This hook will be called when nothing special can be performed by
 the busy =C-c C-c= key.  Thanks to Paul Sexton for this idea!
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Deaafa42948427da37c065c8294edd0d0f30cccd4][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Deaafa42948427da37c065c8294edd0d0f30cccd4][(git commit)]]
 
 *** Allow relative time when scheduling/adding a deadline
 
@@ -4369,7 +4369,7 @@ You can also use this while (bulk-)rescheduling and
 
 Thanks to Memnon Anon for a heads up about this!
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D88eada52a63539b8866b9be861ea72ffbcafb37e][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D88eada52a63539b8866b9be861ea72ffbcafb37e][(git commit)]]
 
 *** New functions: =org-todo-yesterday= and =org-agenda-todo-yesterday=
 
@@ -4377,7 +4377,7 @@ This is useful when you need to mark things done yesterday.
 
 Thanks to Max Mikhanosha for this patch.
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Ddea1a6f87b1fcd0122796a6603948bf131d4ff69][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Ddea1a6f87b1fcd0122796a6603948bf131d4ff69][(git commit)]]
 
 *** =org-set-property= defaults to the last interactively modified property
 
@@ -4386,7 +4386,7 @@ last interactively modified property as a default choice.  If
 this command is called on a property line, the property in this
 line will take precedence over the last set property.
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D9a2bf023467ad97fd171422c06541651c24b6014][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D9a2bf023467ad97fd171422c06541651c24b6014][(git commit)]]
 
 *** Clock: Allow synchronous update of timestamps in CLOCK log
 
@@ -4397,7 +4397,7 @@ slightly modified in case a timestamp needs some rounding.
 
 Thanks to Rainer Stengele for this idea.
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Ddb731a971546aef8a1003df8f73462fc6dfd6a5a][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Ddb731a971546aef8a1003df8f73462fc6dfd6a5a][(git commit)]]
 
 *** Clock: New function =org-clock-remove-empty-clock-drawer=
 
@@ -4405,7 +4405,7 @@ This function removes empty =CLOCK= drawers and has been added to
 =org-clock-out-hook=: when clocking out, if no CLOCK log has been
 inserted and the drawer is empty, the drawer will be removed.
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D65b64bea53e73ea73a4b791a1057b074db144b23][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D65b64bea53e73ea73a4b791a1057b074db144b23][(git commit)]]
 
 *** Capture: new escape sequence =%F= for templates
 
@@ -4415,7 +4415,7 @@ file or the directory the capture mechanism was called from
 
 Thanks to Nicolas Goaziou for this change.
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D819fbec64160c3c33884b116734c01f56be7606b][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D819fbec64160c3c33884b116734c01f56be7606b][(git commit)]]
 
 *** Agenda: new variable =org-agenda-bulk-custom-functions= for custom bulk functions
 
@@ -4433,7 +4433,7 @@ the latter ones take precedence.
 
 Thanks to Julien Cubizolles for triggering this idea.
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D1029a9251741c2cdf10281866a2fbbdaf2e1cb25][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D1029a9251741c2cdf10281866a2fbbdaf2e1cb25][(git commit)]]
 
 *** Refile: exclude irrelevant headings
 
@@ -4480,7 +4480,7 @@ In this example, =0.92= is a fraction of hour, the default for
 
 Thanks to Daniel E. Doherty for discussions about this.
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D70fab165e1966b32e08ed05776ca19e711d1d1e9][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D70fab165e1966b32e08ed05776ca19e711d1d1e9][(git commit)]]
 
 *** Table: display field's coordinates when editing it with =C-c `=
 
@@ -4489,7 +4489,7 @@ the displayed in the buffer.
 
 Thanks to Michael Brand for a patch to this effect.
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3De7eb56f39b5b843bc1487bb49c58e99e51c81fc1][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3De7eb56f39b5b843bc1487bb49c58e99e51c81fc1][(git commit)]]
 
 *** Babel: support for =java= code blocks
 
@@ -4525,7 +4525,7 @@ The =contrib/babel/langs/= contains the new library
 
 Thanks to him for this addition.
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D2249abb8ad4bb266c5eb808fce1f7e6be9173628][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D2249abb8ad4bb266c5eb808fce1f7e6be9173628][(git commit)]]
 
 *** Babel: support for the [[http://fomus.sourceforge.net/][fomus]] language by Torsten Anders
 
@@ -4533,7 +4533,7 @@ Thanks to him for this addition.
 
 Thanks to Torsten Anders for contributing this functionality.
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Dbaa83dacc732c51e15a593b02218bc5f9ef7fb2e][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Dbaa83dacc732c51e15a593b02218bc5f9ef7fb2e][(git commit)]]
 
 *** Publish: hide .orgx files and use theindex.org directly
 
@@ -4546,7 +4546,7 @@ directly stored in the file =theindex.org=, not in the file
 Thanks to Nathan Neff and Carsten for pointing at the problems
 and solutions.
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Df0d7acfb7867518529d63fe3d111f5f3cf39a61f][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Df0d7acfb7867518529d63fe3d111f5f3cf39a61f][(git commit)]]
 
 *** Export: new variable =org-export-html-divs= to allow custom divs
 
@@ -4564,7 +4564,7 @@ variable anymore.
 Thanks to Sébastian Vauban for a preliminary version of this
 patch.
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D2f1fbc58be1dc48621217d666da7bc46c3c5d84e][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D2f1fbc58be1dc48621217d666da7bc46c3c5d84e][(git commit)]]
 
 *** Export: new variable =org-export-latex-quotes= to customize quotes in LaTeX export
 
@@ -4578,7 +4578,7 @@ of "some quoted text".
 Thanks to Frederik for bringing this issue up, and to Thomas S.
 Dye, Nick Dokos and Stefan Nobis for elaborating this solution.
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D2b9afb9e63d2fd60a3bb09e33c9d4abb01586339][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D2b9afb9e63d2fd60a3bb09e33c9d4abb01586339][(git commit)]]
 
 ** Important bugfixes
 
@@ -4590,7 +4590,7 @@ Thanks to Christian Moe for signaling this problem.
 
 Thanks to Stefan Vollmar for mentioning this problem.
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Dbbb2ef510ae8fbf28296c8968b99a24408c7c3ce][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Dbbb2ef510ae8fbf28296c8968b99a24408c7c3ce][(git commit)]]
 
 ** Details
 
@@ -4600,7 +4600,7 @@ Thanks to David Maus for suggesting related improvements to
 =org-map-entries=.  This one prepares the possibility of letting
 some commands to loop over the active region.
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D59e7fc4d3a4ee441d4716ca37fd41a2fa64e04d5][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D59e7fc4d3a4ee441d4716ca37fd41a2fa64e04d5][(git commit)]]
 
 *** org-depend.el: new chain-find-next trigger option
 
@@ -4608,7 +4608,7 @@ See the updated docstring of this file.
 
 Thanks a lot to Max Mikhanosha for this!
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Db1279dde0fec5e043b294117d9b999eb99be9a0f][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Db1279dde0fec5e043b294117d9b999eb99be9a0f][(git commit)]]
 
 *** Export: new experimental exporter to MoinMoin by Puneeth Chaganti.
 
@@ -4617,7 +4617,7 @@ allows you to export an Org file to a MoinMoin file.
 
 Thanks to Puneeth Chaganti for this addition.
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Da90b876b936820f6a80cc2ffa807bc29a9de73eb][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Da90b876b936820f6a80cc2ffa807bc29a9de73eb][(git commit)]]
 
 *** Export: new default for =org-export-html-preamble=
 
@@ -4638,7 +4638,7 @@ which makes more sense.
 
 Thanks to Sebastien Vauban for this suggestion.
 
-[[http://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D46a5bde601980c47eccd06d87b82dbae85b20704][(git commit)]]
+[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D46a5bde601980c47eccd06d87b82dbae85b20704][(git commit)]]
 
 *** Export: allow =org-export-latex-href-format= to have only one "%s"
 
@@ -5869,7 +5869,7 @@ This was a request by John Wiegley.
 One frequent request has been to be able to use CamelCase words
 for automatic cross links in a Wiki created by Org.  THis is now
 possible with org-wikinodes.el, which is available in the contrib
-directory.  We also have some [[http://orgmode.org/worg/org-contrib/org-wikinodes.php][documentation]] for this feature up
+directory.  We also have some [[https://orgmode.org/worg/org-contrib/org-wikinodes.php][documentation]] for this feature up
 on Worg.
 
 *** Timer/clock enhancements
@@ -5886,7 +5886,7 @@ From the agenda, `J' invokes =org-agenda-clock-goto=.
 
 *** Emacs 21 support has been dropped
 
-Do not use Org mode 7.xx with Emacs 21, use [[http://orgmode.org/org-6.36c.zip][version 6.36c]] instead.
+Do not use Org mode 7.xx with Emacs 21, use [[https://orgmode.org/org-6.36c.zip][version 6.36c]] instead.
 
 *** XEmacs support requires the XEmacs development version
 
@@ -6104,7 +6104,7 @@ update your babel configuration.
 
 The most significant result of this change is that Babel now has
 documentation!  It is part of Org mode's documentation, see
-Chapter 14 [[http://orgmode.org/manual/Working-with-source-code.html#Working-with-source-code][Working With Source Code]].  The Babel keybindings
+Chapter 14 [[https://orgmode.org/manual/Working-with-source-code.html#Working-with-source-code][Working With Source Code]].  The Babel keybindings
 are now listed in the refcard, and can be viewed from any
 Org mode buffer by pressing =C-c C-v h=.  In addition this
 integration has included a number of bug fixes, and a significant
@@ -6115,7 +6115,7 @@ amount of internal code cleanup.
 This replaces the earlier system org-remember.  The manual only
 describes org-capture, but for people who prefer to continue to
 use org-remember, we keep a static copy of the former manual
-section [[http://orgmode.org/org-remember.pdf][chapter about remember]].
+section [[https://orgmode.org/org-remember.pdf][chapter about remember]].
 
 The new system has a technically cleaner implementation and more
 possibilities for capturing different types of data.  See
@@ -6169,7 +6169,7 @@ entity list.
 *** New module to create Gantt charts
 
 Christian Egli's /org-taskjuggler.el/ module is now part of Org.
-He also wrote a [[http://orgmode.org/worg/org-tutorials/org-taskjuggler.php][tutorial]] for it.
+He also wrote a [[https://orgmode.org/worg/org-tutorials/org-taskjuggler.php][tutorial]] for it.
 
 *** Refile targets can now be cached
 
@@ -6649,7 +6649,7 @@ temporarily in the options section of the command.  This can lead
 to significant speedups, because instead of laboriously finding
 entries and then rejecting them, a whole search cycle is skipped.
 For more information see the new section in
-[[http://orgmode.org/worg/org-tutorials/org-custom-agenda-commands.php#sec-5][Matt Lundin's agenda custom command tutorial]].
+[[https://orgmode.org/worg/org-tutorials/org-custom-agenda-commands.php#sec-5][Matt Lundin's agenda custom command tutorial]].
 
 Thanks to Matt Lundin for this feature.
 
@@ -6933,7 +6933,7 @@ originally.
 Org mode documents or subtrees can now be converted directly in
 to BEAMER presentation.  Turning a tree into a simple
 presentations is straight forward, and there is also quite some
-support to make richer presentations as well.  See the [[http://orgmode.org/manual/Beamer-class-export.html#Beamer-class-export][BEAMER
+support to make richer presentations as well.  See the [[https://orgmode.org/manual/Beamer-class-export.html#Beamer-class-export][BEAMER
 section]] in the manual for more details.
 
 Thanks to everyone who has contributed to the discussion about
@@ -7117,11 +7117,11 @@ type a new value.
 
 - The documentation for Org-babel has been drastically improved
   and is available on Worg at
-  http://orgmode.org/worg/org-contrib/babel/
+  https://orgmode.org/worg/org-contrib/babel/
 - Source-code block names are now exported to HTML and LaTeX
 - Org-babel functions are now bound to keys behind a common key
   prefix (see
-  http://orgmode.org/worg/org-contrib/babel/reference.php#sec-5)
+  https://orgmode.org/worg/org-contrib/babel/reference.php#sec-5)
 - Results are now foldable with TAB
 - Header argument values can now be lisp forms
 - Readable aliases for #+srcname: and #+resname:
