--- a/fr/features.org
+++ b/fr/features.org
@@ -6,7 +6,7 @@
 #+keywords:  Org Emacs outline planning note authoring project plain-text LaTeX HTML
 #+description: Org: an Emacs Mode for Notes, Planning, and Authoring
 #+macro: updown #+HTML: <div class="move"><a onclick="goToByScroll('$1');return false;" href="#">< $1</a> · <a onclick="goToByScroll('$2');return false;" href="#">$2 ></a></div>
-#+html_head:     <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
+#+html_head:     <link rel="stylesheet" href="https://orgmode.org/org.css" type="text/css" />
 
 #+begin_export html
 <div id="top"><p><em>Org mode permet de prendre des notes, de maintenir des listes TODO, de
@@ -31,7 +31,7 @@ fonctions d'édition.
 
 ** More
 
-Plus sur la [[http://orgmode.org/manual/Document-Structure.html#Document-Structure][structure des documents]] (manuel)
+Plus sur la [[https://orgmode.org/manual/Document-Structure.html#Document-Structure][structure des documents]] (manuel)
 
 ** Move
    :PROPERTIES:
@@ -61,9 +61,9 @@ dates et des échéances, des tags, des propriétés, etc.
 
 ** More
 
-Plus sur les [[http://orgmode.org/manual/TODO-Items.html#TODO-Items][items TODO]] (manuel)
+Plus sur les [[https://orgmode.org/manual/TODO-Items.html#TODO-Items][items TODO]] (manuel)
 
-Gérer les [[http://orgmode.org/manual/Dates-and-Times.html#Dates-and-Times][dates et l'horodatage]] (manuel)
+Gérer les [[https://orgmode.org/manual/Dates-and-Times.html#Dates-and-Times][dates et l'horodatage]] (manuel)
 
 ** Move
    :PROPERTIES:
@@ -95,7 +95,7 @@ patron.
 
 ** More
 
-Plus sur le [[http://orgmode.org/manual/Clocking-work-time.html#Clocking-work-time][chronométrage des tâches]] (manuel)
+Plus sur le [[https://orgmode.org/manual/Clocking-work-time.html#Clocking-work-time][chronométrage des tâches]] (manuel)
 
 ** Move
    :PROPERTIES:
@@ -129,9 +129,9 @@ de travail à mesure que celles-ci se stabilisent.
 
 ** More
 
-Plus sur les [[http://orgmode.org/manual/Agenda-Views.html#Agenda-Views][vues agenda]] (manuel)
+Plus sur les [[https://orgmode.org/manual/Agenda-Views.html#Agenda-Views][vues agenda]] (manuel)
 
-Tutoriel sur les [[http://orgmode.org/worg/org-tutorials/org-custom-agenda-commands.html][commandes agenda]] (Worg)
+Tutoriel sur les [[https://orgmode.org/worg/org-tutorials/org-custom-agenda-commands.html][commandes agenda]] (Worg)
 
 ** Move
    :PROPERTIES:
@@ -160,7 +160,7 @@ la date du jour, la région, etc.)
 
 ** More
 
-Plus sur la [[http://orgmode.org/manual/Capture.html#Capture][capture]] (manuel)
+Plus sur la [[https://orgmode.org/manual/Capture.html#Capture][capture]] (manuel)
 
 ** Move
    :PROPERTIES:
@@ -190,13 +190,13 @@ Vous pouvez utiliser des formules écrites avec [[http://www.gnu.org/software/em
 
 ** More
 
-[[http://orgmode.org/manual/Built_002din-table-editor.html#Built_002din-table-editor][L'éditeur de tableaux]] (manuel)
+[[https://orgmode.org/manual/Built_002din-table-editor.html#Built_002din-table-editor][L'éditeur de tableaux]] (manuel)
 
-Org comme [[http://orgmode.org/manual/The-spreadsheet.html#The-spreadsheet][tableur]] (manuel)
+Org comme [[https://orgmode.org/manual/The-spreadsheet.html#The-spreadsheet][tableur]] (manuel)
 
-Introduction à [[http://orgmode.org/worg/org-tutorials/tables.html][l'édition de tableaux]] (Worg)
+Introduction à [[https://orgmode.org/worg/org-tutorials/tables.html][l'édition de tableaux]] (Worg)
 
-Utiliser [[http://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html][Org comme tableur]] (Worg)
+Utiliser [[https://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html][Org comme tableur]] (Worg)
 
 ** Move
    :PROPERTIES:
@@ -220,22 +220,22 @@ Vous pouvez utiliser de éléments intuitifs de mise en forme et convertir
 vos documents en =HTML=, $\LaTeX{}$, =ODT= -- et bien d'autres formats.
 
 Les développeurs peuvent facilement ajouter l'export vers de nouveaux
-formats (voir la [[http://orgmode.org/worg/dev/org-export-reference.html][documentation de référence]]).
+formats (voir la [[https://orgmode.org/worg/dev/org-export-reference.html][documentation de référence]]).
 
 Vous pouvez aussi définir des projets de publication, contenant un ou
 plusieurs fichier(s) =.org=, et exportant vers un ou plusieurs format(s).
 
 ** More
 
-Plus sur la [[http://orgmode.org/manual/Markup.html#Markup][mise en forme]] (manuel)
+Plus sur la [[https://orgmode.org/manual/Markup.html#Markup][mise en forme]] (manuel)
 
-Plus sur l'[[http://orgmode.org/manual/Exporting.html#Exporting][export]] (manuel)
+Plus sur l'[[https://orgmode.org/manual/Exporting.html#Exporting][export]] (manuel)
 
-Plus sur la [[http://orgmode.org/manual/Publishing.html#Publishing][publication]] (manuel)
+Plus sur la [[https://orgmode.org/manual/Publishing.html#Publishing][publication]] (manuel)
 
-[[http://orgmode.org/worg/org-tutorials/org-publish-html-tutorial.html][Tutoriel pour publier en HTML]] to =HTML= (Worg)
+[[https://orgmode.org/worg/org-tutorials/org-publish-html-tutorial.html][Tutoriel pour publier en HTML]] to =HTML= (Worg)
 
-[[http://orgmode.org/worg/org-tutorials/org-latex-export.html][Tutoriel pour publier]] en $\LaTeX{}$ (Worg)
+[[https://orgmode.org/worg/org-tutorials/org-latex-export.html][Tutoriel pour publier]] en $\LaTeX{}$ (Worg)
 
 ** Move
    :PROPERTIES:
@@ -263,9 +263,9 @@ fichier source.
 
 ** More
 
-[[http://orgmode.org/manual/Working-With-Source-Code.html#Working-With-Source-Code][Interagir avec du code source]] (manuel)
+[[https://orgmode.org/manual/Working-With-Source-Code.html#Working-With-Source-Code][Interagir avec du code source]] (manuel)
 
-Liste des [[http://orgmode.org/worg/org-contrib/babel/languages.html][langages supportés]] (Worg)
+Liste des [[https://orgmode.org/worg/org-contrib/babel/languages.html][langages supportés]] (Worg)
 
 ** Move
    :PROPERTIES:
