--- a/ja/index.org
+++ b/ja/index.org
@@ -7,7 +7,8 @@
 #+description: Org: ノート、計画、編集のための Emacs モード
 #+macro: next #+HTML: <div class="move">> <a onclick="goToByScroll('$1');return false;" href="#">documentation</a></div>
 #+macro: previous #+HTML: <div class="move">< <a onclick="goToByScroll('$1');return false;" href="#">download and install</a></div>
-#+html_head:     <link rel="stylesheet" href="../org.css" type="text/css" />
+#+html_head: <link rel="stylesheet" href="../org.css" type="text/css" />
+#+html_head: <meta name="flattr:id" content="8d9x0o">
 
 #+begin_export html
 <div id="top"><p><em>Org-mode は、ノートの保存、TODOリストの管理、プロジェクト計画のためのモードです。高速で効率的なプレーンテキストのシステムを使ってファイルを編集します。<br />
