community: Remove non-functional link to Gmane
Reported-by: Brent Goodrick <bgoodr@gmail.com>
<http://lists.gnu.org/r/emacs-orgmode/2018-02/msg00062.html>

--- a/community.org
+++ b/community.org
@@ -23,7 +23,7 @@ projects, and authoring documents with a fast and effective plain-text system.</
 
 Subscribe to the [[https://lists.gnu.org/mailman/listinfo/emacs-orgmode][mailing list]].
 
-Browse it [[http://news.gmane.org/gmane.emacs.orgmode][through Gmane]].
+Browse the [[http://lists.gnu.org/archive/html/emacs-orgmode/][archives]].
 
 #+begin_export html
 <form id="searchgmane" method="get" action="http://search.gmane.org/">
